Fix for profile

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -17,10 +17,6 @@
       <br>
       <br>
       <br>
-      <ion-row><span class="link text-semibold">Settings</span></ion-row>
-      <br>
-      <br>
-      <br>
       <ion-row><span class="link text-semibold">Credits</span></ion-row>
       <br>
       <br>
@@ -29,10 +25,11 @@
       <br>
       <br>
       <br>
-      <ion-row><span class="link text-semibold">Accessibilità</span></ion-row>
       <br>
       <br>
       <br>
-      <ion-row><span  class="link text-semibold" (click)="signOut()">Logout</span></ion-row>
-    </ion-grid>
+      <span class="center-horizontally">
+        <ion-button fill="outline" class="button-logout text-semibold ion-text-capitalize" (click)="signOut()">Logout</ion-button>
+      </span>
+     </ion-grid>
   </ion-content>
