--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -15,4 +15,9 @@
         color: #0073E6;
         font-size: 17px;
     }
+    .button-logout {
+        background-color: #CCE6FF;
+        color: #0073E6;
+        font-size:17px;
+    }
 }
