--- a/src/global.scss
+++ b/src/global.scss
@@ -97,3 +97,11 @@ img.animated-gif{
     -o-transition: opacity 1s;
     transition: opacity 1s;        
   } 
+
+  .center-horizontally {
+    margin: 0;
+    position: absolute;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
