--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -15,21 +15,29 @@
         </ion-col>
       </ion-row>
       <br>
+      <ion-row>
+        <ion-col size="5"></ion-col>
+        <ion-col size="7">
+          <span>
+            <ion-button fill="outline" class="button-logout text-semibold ion-text-capitalize" (click)="signOut()">Logout</ion-button>
+          </span>
+        </ion-col>
+        
+      </ion-row>
       <br>
       <br>
-      <ion-row><span class="link text-semibold">Credits</span></ion-row>
+      <br>
+      <ion-row>
+        <span class="link text-semibold">
+        <a href="mailto:cartella-help@smartcommunitylab.it">Assistenza</a>
+        </span>
+      </ion-row>
       <br>
       <br>
-      <br>
-      <ion-row><span class="link text-semibold">Help</span></ion-row>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <span class="center-horizontally">
-        <ion-button fill="outline" class="button-logout text-semibold ion-text-capitalize" (click)="signOut()">Logout</ion-button>
-      </span>
+      <ion-row>
+        <span class="link text-semibold text-underline">
+          <a (click)="credits()">Credits</a>
+        </span>
+      </ion-row>     
      </ion-grid>
   </ion-content>
