--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -14,6 +14,7 @@
     .link {
         color: #0073E6;
         font-size: 18px;
+        text-decoration: underline;
     }
     .button-logout {
         background-color: #CCE6FF;
