--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
 
-  <ion-tab-bar class="hide-on-keyboard-open" slot="bottom">
+  <ion-tab-bar *ngIf="show" slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon src="./assets/icon/it-user.svg"></ion-icon>
       <ion-label class="icon-label">Profilo</ion-label>
