--- a/src/app/tab1/actions/credits/credits.page.html
+++ b/src/app/tab1/actions/credits/credits.page.html
@@ -9,7 +9,7 @@
     <ion-row>
       <ion-col size="4"></ion-col>  
       <ion-col size="2">
-          <a (click)="openKeyboard()"> <!--target="_blank" href="http://www.provincia.tn.it/"-->
+          <a target="_blank" href="http://www.provincia.tn.it/">
             <img src="./assets/image/provinciaTN.png" class="footer-imgTN">
           </a>&nbsp;&nbsp;
         </ion-col>
