Fix for asl2-230

--- a/src/app/tab2/actions/gestione-presenze-gruppo/gestione-presenze-gruppo.page.html
+++ b/src/app/tab2/actions/gestione-presenze-gruppo/gestione-presenze-gruppo.page.html
@@ -41,7 +41,7 @@
 </ion-header>
 <ion-content *ngIf="attivita && presenze">
     <ion-list class="item-container">
-                <div id="{{giorno.giornata}}" [style.background]="bgColor(giorno)" [class.disabled]="isInfuture(giorno) || giorno.verificata" class="item" *ngFor="let giorno of presenze"
+                <div id="{{giorno.giornata}}" [style.background]="bgColor(giorno)" [class.disabled]="isInfuture(giorno) || giorno.verificata || attivita.aa.stato=='archiviata'" class="item" *ngFor="let giorno of presenze"
                     (click)="showPicker(giorno)">
                     <ion-grid>
                         <ion-row>
