--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -36,3 +36,11 @@
     padding-top: 0px;
     padding-bottom: 0px;
 }
+.link-presenze {
+    color: #0066CC;
+    font-size: 14px;
+}
+.icon {
+    width: 24px;
+    height: 24px;
+}
