--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -39,27 +39,30 @@
 <ion-content>
  <ion-grid class="padding-0">
         <ion-list>
-          <div class="item" *ngFor="let esp of attivitaStudente" (click)="openDetail(esp)">
+          <div class="item" *ngFor="let esp of attivitaStudente">
             <ion-grid>
               <ion-row>
-                <ion-col size="8"><span class="titolo ion-text-capitalize text-bold">{{esp.titolo}}</span></ion-col>
-                <ion-col size="4" class>
+                <ion-col size="8"><span class="titolo ion-text-capitalize text-bold" (click)="openDetail(esp)">{{esp.titolo}}</span></ion-col>
+                <ion-col size="4" (click)="openDetail(esp)">
                   <span class="float-right stato">
                     <span class="text-semibold">Stato:&nbsp;</span>
                     <span [style.color]="getColor(esp)">{{ getStatoNome(esp.stato) }}</span>
                   </span>                  
                 </ion-col>
               </ion-row>
-              <ion-row>
+              <ion-row (click)="openPresenze(esp)">
+                <span class="link-presenze v-center"><ion-icon class="icon" src="./assets/icon/it-calendar.svg"></ion-icon>&nbsp;Vedi presenze attività</span>
+              </ion-row>
+              <ion-row (click)="openDetail(esp)">
                 <ion-col><span class="attributes text-semibold">Ore svolte:&nbsp;</span><span
                     class="attributes-value">{{esp.oreValidate}}/{{esp.oreTotali}}</span></ion-col>
               </ion-row>
-              <ion-row>
+              <ion-row (click)="openDetail(esp)">
                 <ion-col><span class="attributes text-semibold">Periodo:&nbsp;</span><span
                     class="attributes-value">{{esp.dataInizio | date: 'dd/MM/yyyy' }} -
                     {{esp.dataFine | date: 'dd/MM/yyyy' }}</span></ion-col>
               </ion-row>
-              <ion-row *ngIf="esp.nomeEnte">
+              <ion-row *ngIf="esp.nomeEnte" (click)="openDetail(esp)">
                 <ion-col><span class="attributes text-semibold">Presso:&nbsp;</span><span class="attributes-value ion-text-capitalize">{{esp.nomeEnte}}</span>
                 </ion-col>
               </ion-row>
