--- a/src/app/tab3/actions/esperienza-dettaglio/esperienza-dettaglio.component.scss
+++ b/src/app/tab3/actions/esperienza-dettaglio/esperienza-dettaglio.component.scss
@@ -59,3 +59,11 @@
 .icon-delete {
     font-size: 20px;
 }
+.link-presenze {
+    color: #0066CC;
+    font-size: 14px;
+}
+.icon-presenze {
+    width: 24px;
+    height: 24px;
+}
