--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -51,10 +51,12 @@
                 </ion-col>
               </ion-row>
               <ion-row>
-                <ion-col>
+                <ion-col size="8">
                   <span class="link-presenze v-center" (click)="openPresenze(esp)">
                     <ion-icon class="icon" src="./assets/icon/it-calendar.svg"></ion-icon>&nbsp;Vedi presenze attività
                   </span>
+                </ion-col>
+                <ion-col size="4" (click)="openDetail(esp)">
                 </ion-col>
               </ion-row>
               <ion-row (click)="openDetail(esp)">
