Fix for asl2-237

--- a/src/app/tab2/actions/gestione-presenze-gruppo/gestione-presenze-gruppo.page.html
+++ b/src/app/tab2/actions/gestione-presenze-gruppo/gestione-presenze-gruppo.page.html
@@ -17,9 +17,14 @@
             </ion-col>            
         </ion-row>
         <ion-row>
-            <ion-col>
+            <ion-col size="6">
                 <span class="top-bar-attributes text-semibold">Ore svolte:</span><span class="top-bar-attributes-values">{{attivita.oreValidate}}/{{attivita.oreTotali}}</span>
-            </ion-col>            
+            </ion-col>
+            <ion-col size="6">
+                <span class="float-right">
+                    <span class="top-bar-attributes text-semibold">Da validare:&nbsp;</span><span class="attributes-value-validare">{{attivita.oreDaValidare}}</span>
+                </span>                
+            </ion-col>              
         </ion-row>
         <br>
         <ion-row>
