--- a/src/app/tab2/actions/gestione-presenze-individuale/gestione-presenze-individuale.page.scss
+++ b/src/app/tab2/actions/gestione-presenze-individuale/gestione-presenze-individuale.page.scss
@@ -22,6 +22,10 @@
     color: #5C6F82;
     font-size: 15px;
 }
+.attributes-value-validare {
+    color:orange;
+    font-size:  14px;
+}
 .error {
     font-size: 12px;
     color: #FF667D;
