--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -62,6 +62,10 @@ ion-content {
             color: #5C6F82;
             font-size: 14px;
         }
+        .sleeping-icon {
+            height: 142px;
+            width: 160px;
+        }        
     }
 
 }
