--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -13,7 +13,7 @@
 
     <ion-tab-button tab="tab3">
       <ion-icon src="./assets/icon/it-folder.svg"></ion-icon>
-      <ion-label class="icon-label">Esperienze</ion-label>
+      <ion-label class="icon-label">Attività</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
