--- a/src/app/tab2/actions/gestione-presenze-individuale-input/gestione-presenze-individuale-input.page.html
+++ b/src/app/tab2/actions/gestione-presenze-individuale-input/gestione-presenze-individuale-input.page.html
@@ -27,8 +27,7 @@
     <div class="item">
         <br>
         <ion-row class="text-center" *ngIf="isError(giorno)">
-            <span class="error">Attenzione: ore non inserite e/o diario non compilato. Per indicare un’assenza, inserire
-                “0” nel campo ore</span>
+            <span class="error">Attenzione: ore non inserite e/o diario non compilato</span>
             <br>
             <br>
         </ion-row>
