Fix for asl2-240

--- a/src/app/tab2/actions/gestione-presenze-gruppo/gestione-presenze-gruppo.page.html
+++ b/src/app/tab2/actions/gestione-presenze-gruppo/gestione-presenze-gruppo.page.html
@@ -18,7 +18,7 @@
         </ion-row>
         <ion-row>
             <ion-col size="6">
-                <span class="top-bar-attributes text-semibold">Ore svolte:</span><span class="top-bar-attributes-values">{{attivita.oreValidate}}/{{attivita.oreTotali}}</span>
+                <span class="top-bar-attributes text-semibold">Ore inserite:</span><span class="top-bar-attributes-values">{{attivita.oreValidate}}/{{attivita.oreTotali}}</span>
             </ion-col>
             <ion-col size="6">
                 <span class="float-right">
