--- a/src/app/tab2/actions/gestione-presenze-individuale-input/gestione-presenze-individuale-input.page.html
+++ b/src/app/tab2/actions/gestione-presenze-individuale-input/gestione-presenze-individuale-input.page.html
@@ -32,7 +32,7 @@
             <br>
         </ion-row>
         <ion-row>
-            <span class="attributes-2">Ore svolte:</span>
+            <span class="attributes-2">Ore inserite:</span>
         </ion-row>
         <ion-row>
             <span (click)="showPicker(giorno)" [style.color]="textColor(giorno)" class="attributes-ore"
