--- a/src/app/tab2/actions/gestione-presenze-individuale/gestione-presenze-individuale.page.html
+++ b/src/app/tab2/actions/gestione-presenze-individuale/gestione-presenze-individuale.page.html
@@ -18,7 +18,7 @@
         </ion-row>
         <ion-row>
             <ion-col size="6">
-                <span class="top-bar-attributes text-semibold">Ore svolte:</span><span
+                <span class="top-bar-attributes text-semibold">Ore inserite:</span><span
                     class="top-bar-attributes-values">{{attivita.oreValidate}}/{{attivita.oreTotali}}</span>
             </ion-col>
             <ion-col size="6">
@@ -61,7 +61,7 @@
                     <br>
                 </ion-row>
                 <ion-row>
-                    <span class="attributes-2 text-semibold">Ore svolte:&nbsp;</span><span
+                    <span class="attributes-2 text-semibold">Ore inserite:&nbsp;</span><span
                         class="attributes-2">{{ viewOre(giorno) }}</span>
                 </ion-row>
             </ion-card-header>
