--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -60,7 +60,7 @@
                 </ion-col>
               </ion-row>
               <ion-row (click)="openDetail(esp)">
-                <ion-col><span class="attributes text-semibold">Ore svolte:&nbsp;</span><span
+                <ion-col><span class="attributes text-semibold">Ore inserite:&nbsp;</span><span
                     class="attributes-value">{{esp.oreValidate}}/{{esp.oreTotali}}</span></ion-col>
               </ion-row>
               <ion-row (click)="openDetail(esp)">
