--- a/src/app/tab3/actions/esperienza-dettaglio/esperienza-dettaglio.component.html
+++ b/src/app/tab3/actions/esperienza-dettaglio/esperienza-dettaglio.component.html
@@ -27,7 +27,7 @@
         <br>
         <ion-row>
             <ion-col size="6">
-                <span class="attributes text-semibold ">Ore svolte:&nbsp;</span><span class="attributes-value">{{attivita.oreValidate}}/{{attivita.oreTotali}}</span>
+                <span class="attributes text-semibold ">Ore inserite:&nbsp;</span><span class="attributes-value">{{attivita.oreValidate}}/{{attivita.oreTotali}}</span>
             </ion-col>
             <ion-col size="5">
                 <span class="float-right">
