--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header class="header">
   <ion-row *ngIf="summary">
     <ion-col class="attributes-value" size="8">
-      <ion-row><span class="heading text-semibold">Le mie esperienze</span></ion-row>
+      <ion-row><span class="heading text-semibold">Le mie attività</span></ion-row>
       <br>
       <ion-row><span>Ore totali:&nbsp;</span><span>{{summary.oreValidate}}/{{summary.oreTotali}}</span></ion-row>
       <br>
