--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -9,7 +9,7 @@
       <ion-row><span>{{summary.esperienzeConcluse}}&nbsp;esperienze concluse</span></ion-row>
       <br>
       <br>
-      <ion-row><span>{{summary.esperienzeConcluse}}&nbsp;esperienze in corso</span></ion-row>
+      <ion-row><span>{{summary.espereinzeInCorso}}&nbsp;esperienze in corso</span></ion-row>
     </ion-col>
     <ion-col size="4">
       <ion-row></ion-row>
