--- a/src/app/tab2/actions/gestione-presenze-individuale-input/gestione-presenze-individuale-input.page.html
+++ b/src/app/tab2/actions/gestione-presenze-individuale-input/gestione-presenze-individuale-input.page.html
@@ -43,7 +43,7 @@
             <span class="attributes-2">Diario di bordo</span>
         </ion-row>
         <ion-row>
-            <ion-textarea maxlength="250" (ionFocus)="onFocus()" (ionBlur)="onBlur()" [style.border]="border(giorno)" class="text-area"
+            <ion-textarea (ionInput)=checkLimit() (ionFocus)="onFocus()" (ionBlur)="onBlur()" [style.border]="border(giorno)" class="text-area"
                 [(ngModel)]="giorno.attivitaSvolta" name="note" autocomplete="on" autocorrect="on"></ion-textarea> <!--(keyup.enter)="savePresenze(giorno)"-->
             
         </ion-row>
