Fixes for asl2-240,2-244

--- a/src/app/tab2/actions/gestione-presenze-individuale/gestione-presenze-individuale.page.scss
+++ b/src/app/tab2/actions/gestione-presenze-individuale/gestione-presenze-individuale.page.scss
@@ -26,6 +26,9 @@
     color:orange;
     font-size:  14px;
 }
+.validato {
+    color: #A2ADB8;    
+}
 .error {
     font-size: 12px;
     color: #FF667D;
@@ -42,6 +45,7 @@
     }
     .para {
         text-align: justify;
+        color: #707070;
     }
     .text-area {
         align-content: left;
