--- a/src/app/tab2/actions/gestione-presenze-individuale/gestione-presenze-individuale.page.html
+++ b/src/app/tab2/actions/gestione-presenze-individuale/gestione-presenze-individuale.page.html
@@ -19,7 +19,7 @@
         <ion-row>
             <ion-col size="6">
                 <span class="top-bar-attributes text-semibold">Ore inserite:</span><span
-                    class="top-bar-attributes-values">{{attivita.oreValidate}}/{{attivita.oreTotali}}</span>
+                    class="top-bar-attributes-values">{{attivita.oreValidate + attivita.oreDaValidare}}</span>
             </ion-col>
             <ion-col size="6">
                 <span class="float-right">
@@ -48,29 +48,40 @@
             *ngFor="let giorno of presenze" (click)="input(giorno)">
             <ion-card-header>
                 <ion-row>
-                    <span [style.color]="textColor(giorno)"
-                        class="attributes-1 text-bold ion-text-lowercase">{{ giorno.giornata | date: 'dd MMMM yyyy' }}
-                        <span [style.color]="textColor(giorno)" class="attributes-1 text-bold ion-text-capitalize"> -
-                            {{ giorno.giornata | date: 'EEEE' }}</span>
-                    </span>
+                    <ion-col size="8">
+                        <span [style.color]="textColor(giorno)"
+                            class="attributes-1 text-bold ion-text-lowercase">{{ giorno.giornata | date: 'dd MMMM yyyy' }}
+                            <span [style.color]="textColor(giorno)" class="attributes-1 text-bold ion-text-capitalize"> -
+                                {{ giorno.giornata | date: 'EEEE' }}</span>
+                        </span>
+                    </ion-col>
+                    <ion-col>
+                        <span *ngIf="giorno.verificata" class="float-right text-italic validato">Validato</span>
+                    </ion-col>
                 </ion-row>
                 <br>
                 <ion-row *ngIf="isError(giorno)">
-                    <span class="error">Attenzione: giornata non compilata</span>
+                    <ion-col>
+                        <span class="error">Attenzione: giornata non compilata</span>
+                    </ion-col>
                     <br>
                     <br>
                 </ion-row>
                 <ion-row>
-                    <span class="attributes-2 text-semibold">Ore inserite:&nbsp;</span><span
-                        class="attributes-2">{{ viewOre(giorno) }}</span>
+                    <ion-col>
+                        <span [style.color]="validatoTextColor(giorno)" class="attributes-2 text-semibold">Ore inserite:&nbsp;</span><span
+                        [style.color]="validatoTextColor(giorno)" class="attributes-2">{{ viewOre(giorno) }}</span>
+                    </ion-col>                    
                 </ion-row>
             </ion-card-header>
             <ion-card-content>
                 <ion-row>
-                    <p class="para" *ngIf="giorno.verificata">{{giorno.attivitaSvolta}}</p>
-                    <ion-textarea class="text-area" sytle="placeholder-font-style:italic"
-                        *ngIf="!giorno.verificata" [(ngModel)]="giorno.attivitaSvolta"
-                        placeholder="inserisci diario di bordo."></ion-textarea>
+                    <ion-col>
+                        <p class="para" *ngIf="giorno.verificata">{{giorno.attivitaSvolta}}</p>
+                        <ion-textarea class="text-area" sytle="placeholder-font-style:italic"
+                            *ngIf="!giorno.verificata" [(ngModel)]="giorno.attivitaSvolta"
+                            placeholder="inserisci diario di bordo."></ion-textarea>
+                    </ion-col>                    
                 </ion-row>
             </ion-card-content>
         </ion-card>
