--- a/src/app/tab2/actions/gestione-presenze-individuale/gestione-presenze-individuale.page.html
+++ b/src/app/tab2/actions/gestione-presenze-individuale/gestione-presenze-individuale.page.html
@@ -18,7 +18,7 @@
         </ion-row>
         <ion-row>
             <ion-col size="6">
-                <span class="top-bar-attributes text-semibold">Ore inserite:</span><span
+                <span class="top-bar-attributes text-semibold">Ore inserite:&nbsp;</span><span
                     class="top-bar-attributes-values">{{attivita.oreValidate + attivita.oreDaValidare}}</span>
             </ion-col>
             <ion-col size="6">
