--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -61,7 +61,7 @@
               </ion-row>
               <ion-row (click)="openDetail(esp)">
                 <ion-col><span class="attributes text-semibold">Ore inserite:&nbsp;</span><span
-                    class="attributes-value">{{esp.oreValidate}}/{{esp.oreTotali}}</span></ion-col>
+                    class="attributes-value">{{esp.oreValidate + esp.oreDaValidare}}</span></ion-col>
               </ion-row>
               <ion-row (click)="openDetail(esp)">
                 <ion-col><span class="attributes text-semibold">Periodo:&nbsp;</span><span
