--- a/src/app/tab3/actions/esperienza-dettaglio/esperienza-dettaglio.component.html
+++ b/src/app/tab3/actions/esperienza-dettaglio/esperienza-dettaglio.component.html
@@ -92,11 +92,11 @@
         </ion-grid>
         <br>
         <ion-row>
-            <div class="button-upload">
+            <div [class.disabled]="true" class="button-upload">
                 <span class="label-button">
                     <label>Carica documento &nbsp;
                         <ion-icon class="icon" src="./assets/icon/it-upload.svg"></ion-icon>
-                        <input #fileInput type="file" hidden (click)="fileInput.value = null" value=""
+                        <input disabled #fileInput type="file" hidden (click)="fileInput.value = null" value=""
                             (change)="uploadDocument($event)">
                     </label>
                 </span>                
