--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -6,10 +6,10 @@
       <ion-row><span>Ore totali:&nbsp;</span><span>{{summary.oreValidate}}/{{summary.oreTotali}}</span></ion-row>
       <br>
       <br>
-      <ion-row><span>{{summary.esperienzeConcluse}}&nbsp;esperienze concluse</span></ion-row>
+      <ion-row><span>{{summary.esperienzeConcluse}}&nbsp;attività concluse</span></ion-row>
       <br>
       <br>
-      <ion-row><span>{{summary.espereinzeInCorso}}&nbsp;esperienze in corso</span></ion-row>
+      <ion-row><span>{{summary.espereinzeInCorso}}&nbsp;attività in corso</span></ion-row>
     </ion-col>
     <ion-col size="4">
       <ion-row></ion-row>
