--- a/src/app/tab1/actions/credits/credits.page.html
+++ b/src/app/tab1/actions/credits/credits.page.html
@@ -21,7 +21,7 @@
         <ion-col size="4"></ion-col>
       </ion-row>
     <br>
-    <p class="text-center p1">Copyright Smart Communities 2020 Fondazione Bruno Kessler Provincia Autonoma di Trento</p>
+    <p class="text-center p1">Copyright Smart Communities 2020 Fondazione Bruno Kessler e Provincia Autonoma di Trento</p>
     <br>
     <p class="text-center p1 text-semibold">Questa applicazione è stata progettata tramite un percorso di co-design con studenti dei seguenti istituti:</p>
     <br>
