--- a/src/app/tab2/actions/gestione-presenze-individuale-input/gestione-presenze-individuale-input.page.html
+++ b/src/app/tab2/actions/gestione-presenze-individuale-input/gestione-presenze-individuale-input.page.html
@@ -31,10 +31,8 @@
             <br>
             <br>
         </ion-row>
-        <ion-row>
+        <ion-row class="v-center">
             <span class="attributes-2">Ore inserite:</span>
-        </ion-row>
-        <ion-row>
             <span (click)="showPicker(giorno)" [style.color]="textColor(giorno)" class="attributes-ore"
                 padding>{{ viewOre(giorno) }}</span>
         </ion-row>
