--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -21,4 +21,9 @@
         color: #0073E6;
         font-size:17px;
     }
+    .icon-edit {
+        width: 24px;
+        height: 24px;
+    }
 }
+
